--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>今年の残り時間</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="manifest" href="./manifest.json">
+  <link rel="icon" href="./img/icon.png">
+  <link rel="apple-touch-icon" href="./img/icon.png">
 </head>
 <body>
   <div class="background">
