change link text

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <p id="title"><span id="nextyear-text">−−−−</span> countdown</p>
       <p id="clock">--/-- --:--:--</p>
     </div>
+    <div class="link-box">
+      <p>→ <a href="https://github.com/neko0062/countdown">GitHub</a></p>
+    </div>
     <div class="time-container">
       <div class="message">
         <p id="message-text"></p>
@@ -27,9 +30,6 @@
         <p><span id="min">--</span><span>分</span></p>
         <p><span id="sec">--</span><span>秒</span></p>
       </div>
-    </div>
-    <div class="link-box">
-      <p>@neko0062 <a href="https://github.com/neko0062/countdown">GitHub</a></p>
     </div>
     <div id="progress-bar">
       <p id="progress-text"><span>---</span>.-----%</p>
